--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<meta charset="utf-8">
-<h1>Hola, chungo mundo</h1>
-<p>Llamame Sultán Patán</p>
+<!DOCTYPE html>
+<html>
+	<meta charset="utf-8">
+	<head>
+		<title>Learn Enough Git</title>
+	</head>
+	<body>
+		<h1>Hola, chungo mundo</h1>
+		<p>Llamame Sultán Patán</p>
+	</body>
+</html>
