--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<body>
 		<h1>Hola, chungo mundo</h1>
 		<p>Llamame Sultán Patán</p>
-	</body>
 	
+		<img src="imagenes/cthulhu.jpg", alt="Cthulhu en el baño">
+	</body>
+
 </html>
