--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Learn Enough Git</title>
+		<title>Index - Learn Enough Git</title>
 	</head>
 
 	<body>
