--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 	<body>
 		<h1>Hola, chungo mundo</h1>
+		<a href="info.html">Info del proyecto</a>
+		
 		<p>Llamame Sultán Patán</p>
 	
 		<img src="imagenes/cthulhu.jpg", alt="Cthulhu en el baño">
