--- a/info.html
+++ b/info.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>Informacion para el chungo mundo</h1>
     <p>
-      Este sitio es un pryecto de muestra de un <strong>increible</strong> tutorial de Git, gracias a <em>Learn Enough™ Git to Be Dangerous</em>.
+      Este sitio es un pryecto de muestra de un <strong>increible</strong> tutorial de Git, gracias a <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>
     </p>
 	</body>
 
