--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Info - Learn Enough Git</title>
+		<title>Info de nos- Learn Enough Git</title>
 	</head>
 
 	<body>
