--- a/info.html
+++ b/info.html
@@ -11,6 +11,8 @@
     <p>
       Este sitio es un pryecto de muestra de un <strong>increible</strong> tutorial de Git, gracias a <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>
     </p>
+
+    <img src="imagenes/nyarlathotep.jpg", alt="Cuando me despierto, devoro el mundo">
 	</body>
 
 </html>
