Cambio en alt = Cthulhu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 		<p>Llamame Sultán Patán</p>
 	
-		<img src="imagenes/cthulhu.jpg", alt="Cthulhu en el baño">
+		<img src="imagenes/cthulhu.jpg", alt="Cthulhu">
 	</body>
 
 </html>
