--- a/info.html
+++ b/info.html
@@ -8,6 +8,7 @@
 
 	<body>
 		<h1>Informacion para el chungo mundo</h1>
+		<a href="index.html"><img src="imagenes/Yog-Sothoth.jpg", alt="enlace a index", height="300", width="200"></a>
     <p>
       Este sitio es un pryecto de muestra de un <strong>increible</strong> tutorial de Git, gracias a <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>
     </p>
