--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
 		<h1>Informacion para el chungo mundo</h1>
 		<a href="index.html"><img src="imagenes/Yog-Sothoth.jpg", alt="enlace a index", height="300", width="200"></a>
     <p>
-      Este sitio es un pryecto de muestra de un <strong>increible</strong> tutorial de Git, gracias a <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>
+      Este sitio es un proyecto de muestra de un <strong>increible</strong> tutorial de Git, gracias a <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>
     </p>
 
     <img src="imagenes/nyarlathotep.jpg", alt="Cuando me despierto, devoro el mundo">
